--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="media.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -37,9 +38,9 @@
           <h4>Software Engineer</h4>
           <p>There are many variations of passages of Lorem Ipsum available</p>
           <div class="icons">
-            <img src="Icon Box.svg" alt="facebook logo" />
-            <img src="inst.svg" alt="instagram logo" />
-            <img src="twiter.svg" alt="twiter logo" />
+            <img src="image/Icon Box.svg" alt="facebook logo" />
+            <img src="image/inst.svg" alt="instagram logo" />
+            <img src="image/twiter.svg" alt="twiter logo" />
           </div>
         </div>
 
@@ -49,9 +50,9 @@
           <h4>Software Engineer</h4>
           <p>There are many variations of passages of Lorem Ipsum available</p>
           <div class="icons">
-            <img class="face" src="Icon Box.svg" alt="facebook logo" />
-            <img class="insta" src="inst.svg" alt="instagram logo" />
-            <img class="twiter" src="twiter.svg" alt="twiter logo" />
+            <img class="imface" src="image/Icon Box.svg" alt="facebook logo" />
+            <img class="insta" src="image/inst.svg" alt="instagram logo" />
+            <img class="twiter" src="image/twiter.svg" alt="twiter logo" />
           </div>
         </div>
 
@@ -61,9 +62,9 @@
           <h4>Software Engineer</h4>
           <p>There are many variations of passages of Lorem Ipsum available</p>
           <div class="icons">
-            <img src="Icon Box.svg" alt="facebook logo" />
-            <img src="inst.svg" alt="instagram logo" />
-            <img src="twiter.svg" alt="twiter logo" />
+            <img src="image/Icon Box.svg" alt="facebook logo" />
+            <img src="image/inst.svg" alt="instagram logo" />
+            <img src="image/twiter.svg" alt="twiter logo" />
           </div>
         </div>
 
@@ -73,9 +74,9 @@
           <h4>Software Engineer</h4>
           <p>There are many variations of passages of Lorem Ipsum available</p>
           <div class="icons">
-            <img src="Icon Box.svg" alt="facebook logo" />
-            <img src="inst.svg" alt="instagram logo" />
-            <img src="twiter.svg" alt="twiter logo" />
+            <img src="image/Icon Box.svg" alt="facebook logo" />
+            <img src="image/inst.svg" alt="instagram logo" />
+            <img src="image/twiter.svg" alt="twiter logo" />
           </div>
         </div>
       </div>
@@ -86,9 +87,9 @@
           <h4>Software Engineer</h4>
           <p>There are many variations of passages of Lorem Ipsum available</p>
           <div class="icons">
-            <img src="Icon Box.svg" alt="facebook logo" />
-            <img src="inst.svg" alt="instagram logo" />
-            <img src="twiter.svg" alt="twiter logo" />
+            <img src="image/Icon Box.svg" alt="facebook logo" />
+            <img src="image/inst.svg" alt="instagram logo" />
+            <img src="image/twiter.svg" alt="twiter logo" />
           </div>
         </div>
 
@@ -98,9 +99,9 @@
           <h4>Software Engineer</h4>
           <p>There are many variations of passages of Lorem Ipsum available</p>
           <div class="icons">
-            <img src="Icon Box.svg" alt="facebook logo" />
-            <img src="inst.svg" alt="instagram logo" />
-            <img src="twiter.svg" alt="twiter logo" />
+            <img src="image/Icon Box.svg" alt="facebook logo" />
+            <img src="image/inst.svg" alt="instagram logo" />
+            <img src="image/twiter.svg" alt="twiter logo" />
           </div>
         </div>
 
@@ -110,9 +111,9 @@
           <h4>Software Engineer</h4>
           <p>There are many variations of passages of Lorem Ipsum available</p>
           <div class="icons">
-            <img src="Icon Box.svg" alt="facebook logo" />
-            <img src="inst.svg" alt="instagram logo" />
-            <img src="twiter.svg" alt="twiter logo" />
+            <img src="image/Icon Box.svg" alt="facebook logo" />
+            <img src="image/inst.svg" alt="instagram logo" />
+            <img src="image/twiter.svg" alt="twiter logo" />
           </div>
         </div>
 
@@ -122,10 +123,9 @@
           <h4>Software Engineer</h4>
           <p>There are many variations of passages of Lorem Ipsum available</p>
           <div class="icons">
-            <img src="Icon Box.svg" alt="facebook logo" />
-            <img src="inst.svg" alt="instagram logo" />
-            <img src="twiter.svg" alt="twiter logo" />
-          </div>
+            <img src="image/Icon Box.svg" alt="facebook logo" />
+            <img src="image/inst.svg" alt="instagram logo" />
+            <img src="image/twiter.svg" alt="twiter logo" />
         </div>
       </div>
     </section>
@@ -139,9 +139,9 @@
           tempus mauris neque.
         </p>
         <div class="footer-icons">
-          <img src="Icon Box.svg" alt="facebook logo" />
-          <img src="inst.svg" alt="instagram logo" />
-          <img src="twiter.svg" alt="twiter logo" />
+          <img src="image/Vector.svg" />
+          <img src="image/Vector (1).svg" />
+          <img src="image/Vector (2).svg" />
         </div>
       </div>
       <div class="footer-block2">
